[tool.poetry]
name = "buttontracker"
version = "0.1.0"
description = ""
authors = ["alexo <the.onga@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
pygame = "~2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
